--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,8 @@ name: fda
 channels:
   - conda-forge
 dependencies:
-  - python=3.7
+  - python=3.9
+  - pip >= 23.3.1
   - pip:
-    - -r requirements.txt
+    - pip-tools
+    - setuptools
